# TransformerEngine

./: .gitmodules  setup.py
tests/pytorch/: test_cuda_graphs.py  test_float8tensor.py  test_fused_qkv_rope.py  test_fusible_ops.py  test_numerics.py
transformer_engine/: CMakeLists.txt
transformer_engine/cmake/: FindCUDNN_FRONTEND.cmake
transformer_engine/common/: CMakeLists.txt
transformer_engine/common/activation/: gelu.cu
transformer_engine/common/fused_rope/: fused_rope.cu
transformer_engine/common/gemm/: cublaslt_gemm.cu
transformer_engine/common/include/transformer_engine/: activation.h  fused_rope.h  gemm.h  layer_norm.h  transpose.h
transformer_engine/common/layer_norm/: dropout_add_api.cu  philox.h
transformer_engine/common/recipe/: __init__.py  delayed_scaling.cu
transformer_engine/common/transpose/: cast_transpose_fusion.cu  transpose_fusion.cu
transformer_engine/common/util/: math.h
transformer_engine/jax/csrc/: modules.cpp
transformer_engine/paddle/csrc/: custom_ops.cu
transformer_engine/pytorch/: __init__.py  attention.py  cpp_extensions.py  distributed.py  float8_tensor.py  fp8.py  graph.py  module.py  transformer.py
transformer_engine/pytorch/attention/: rope.py
transformer_engine/pytorch/attention/dot_product_attention/: dot_product_attention.py
transformer_engine/pytorch/cpp_extensions/: gemm.py
transformer_engine/pytorch/csrc/: comm_gemm_overlap.h  common.cu  common.h  extensions.cu  extensions.h  quantizer.cpp  ts_fp8_op.cpp
transformer_engine/pytorch/csrc/extensions/: activation.cu  misc.cu  (+3 more)
transformer_engine/pytorch/csrc/userbuffers/: CMakeLists.txt  ipcsocket.cc  ipcsocket.h  userbuffers-host.cpp  userbuffers.cu  userbuffers.h
transformer_engine/pytorch/module/: base.py  grouped_linear.py  layernorm.py  layernorm_linear.py  layernorm_mlp.py  linear.py
transformer_engine/pytorch/ops/: _common.py  sequential.py
transformer_engine/tensorflow/csrc/: extensions.cu
(+2 files in other folders)
